<resources>
    <!--Voip -->
    <string name="voice_chat">语音聊天</string>
    <string name="voice_chat_mute">静音</string>
    <string name="voice_chat_hands_free">免提</string>
    <string name="voice_chat_refuse">拒接</string>
    <string name="voice_chat_answer">接听</string>
    <string name="voice_chat_refuse_call">挂断</string>

    <string name="voice_chat_getmastkey">正在解密通话密钥</string>
    <string name="voice_chat_sendmastkey">正在同步通话密钥</string>
    <!--拨出电话-->
    <string name="voice_call_fail">呼叫失败！</string>
    <string name="voice_chat_cancel">已取消</string>
    <string name="voice_chat_friend_refused">对方已拒绝</string>
    <string name="voice_chat_no_answer">对方无应答</string>
    <!--呼入电话-->
    <string name="voice_chat_hang_up">已拒绝</string>
    <string name="voice_chat_friend_cancel">对方已取消</string>
    <!--呼入和拨出-->
    <string name="voice_chat_time">聊天时长 </string>
    <string name="voice_chat_time_out">未接</string>

    <!--弹出提示-->
    <string name="voice_chat_succeed_user">已挂断</string>
    <string name="voice_chat_succeed">对方已挂断,聊天结束.</string>
    <string name="voice_chat_friend_refused_toast">对方拒绝了您的请求.</string>

    <!--错误提示-->
    <string name="voice_cha_not_logged_in">对方手机不在身边请稍后重试！</string>
    <string name="voice_chat_busy">对方忙线中</string>
    <string name="voice_chat_not_found">对方未登录</string>
    <string name="voice_chat_busy_toast">对方忙,请稍后再试!</string>
    <string name="voice_chat_setmastkey_err_toast">持有好友公钥不正确,请刷新通讯录列表!</string>
    <string name="voice_chat_err">连接失败</string>
    <string name="voice_chat_no_answer_toast">对方手机可能不在身边，建议稍后再次尝试.</string>


    <!--拨打界面-->
    <string name="voice_chat_invite_call">正在等待对方接收邀请</string>
    <string name="voice_chat_invite">邀请你进行语音聊天&#8230;</string>
    <string name="voice_chat_connect">连接中&#8230;</string>
    <string name="voice_chat_calling">呼叫中&#8230;</string>

    <string name="voice_chat_error_calling">正在语音通话，请稍后重试！</string>
    <string name="voice_chat_float_waitting">等待接听</string>

    <string name="voice_chat_no_answer_tips">对方手机可能不在身边，即将挂断</string>
    <string name="voice_chat_notifi_content">通话中&#8230;</string>

    <string name="voice_chat_tips">温馨提示！</string>
    <string name="voice_chat_tips_content">拨打电话中需要开启悬浮窗权限才可以在界面上显示悬浮窗</string>
    <string name="voice_chat_tips_ok">确定</string>
    <string name="voice_chat_tips_cancel">取消</string>
    <string name="error_low_bandwidth">对方带宽过低，无法开启视频</string>
    <string name="voip_switch_voice">切到语音</string>
    <string name="voip_switch_camera">切换摄像头</string>


</resources>
